-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 11.0.6, 14, 15
-
Component/s: hotspot
-
b13
-
Fix failed
This fails in jdk-updates/jdk11u-dev, but not in jdk/jdk. Must be a missing backport, or vanilla jdk11u bug?
$ wget https://repo1.maven.org/maven2/com/lambdazen/bitsy/bitsy/3.0.3/bitsy-3.0.3.jar
$ wget https://cr.openjdk.java.net/~shade/ctw/ctw-jdk11.zip
$ unzip ctw-jdk11.zip
$ ./ctw.sh bitsy-3.0.3.jar
# Internal Error (/home/shade/trunks/jdk-updates-jdk11u-dev/src/hotspot/share/opto/gcm.cpp:763), pid=25570, tid=25604
# assert(store != load->find_exact_control(load->in(0))) failed: dependence cycle found
$ wget https://repo1.maven.org/maven2/com/lambdazen/bitsy/bitsy/3.0.3/bitsy-3.0.3.jar
$ wget https://cr.openjdk.java.net/~shade/ctw/ctw-jdk11.zip
$ unzip ctw-jdk11.zip
$ ./ctw.sh bitsy-3.0.3.jar
# Internal Error (/home/shade/trunks/jdk-updates-jdk11u-dev/src/hotspot/share/opto/gcm.cpp:763), pid=25570, tid=25604
# assert(store != load->find_exact_control(load->in(0))) failed: dependence cycle found
- is cloned by
-
JDK-8240795 [REDO] 8238384 CTW: C2 compilation fails with "assert(store != load->find_exact_control(load->in(0))) failed: dependence cycle found"
-
- Resolved
-
- relates to
-
JDK-8240794 [BACKOUT] 8238384 CTW: C2 compilation fails with "assert(store != load->find_exact_control(load->in(0))) failed: dependence cycle found"
-
- Resolved
-